manifests/kyverno/netpol-orders-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: orders-deny-all-allow-ingress
  namespace: orders
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: orders-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
