manifests/kyverno/policy-require-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resource-limits
spec:
  validationFailureAction: Enforce
  rules:
    - name: require-limits
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kyverno
                - falco
                - kube-node-lease
                - kube-public
                - ingress-nginx
                - monitoring
                - keda
                - sonarqube
                - argocd
                - argo-rollouts
                - cert-manager
                - external-secrets
                - karpenter
                - logging
      validate:
        message: "All containers must have CPU and memory requests and limits set."
        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    cpu: "?*"
                    memory: "?*"
                  limits:
                    cpu: "?*"
                    memory: "?*"
