manifests/kyverno/policy-require-nonroot.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root
spec:
  validationFailureAction: Enforce
  rules:
    - name: require-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kyverno
                - falco
                - kube-node-lease
                - kube-public
                - ingress-nginx
                - monitoring
                - keda
                - sonarqube
                - argocd
                - argo-rollouts
                - cert-manager
                - external-secrets
                - karpenter
                - logging
      validate:
        message: "Containers must run as non-root. Set securityContext.runAsNonRoot to true"
        pattern:
          spec:
            containers:
              - securityContext:
                  runAsNonRoot: true
